getUserCourses
